tests/fixtures/negative/comments/UndocumentedPublicClass.kt
package comments

import kotlin.math.PI

/** Documented class with KDoc. */
class Foo {
    fun doSomething() {
        println("hello")
    }
}
